# 42sh

./: README.md  meson.build
src/: free_functions.c  main.c  utilities.c
src/builtins/: cd.c  dot.c  echo.c  exit.c  true_false.c
src/execution/: exec_cmd.c  exec_main.c  exec_pipeline.c  exec_redir.c  exec_shell_cmd.c  execute_utils.c
src/headers/: all_builtins.h  all_parsers.h  cd.h  dot.h  echo.h  exec_cmd.h  exec_main.h  exec_pipeline.h  exec_redir.h  exec_shell_cmd.h  exec_utils.h  exit.h  free_functions.h  lexer.h  lexer_all.h  lexer_helper1.h  lexer_helper2.h  parse_command.h  parse_input.h  parse_pipeline.h  parse_redir.h  parse_shell_command.h  parser.h  print_ast.h  true_false.h  utilities.h
src/lexer/: lexer.c  lexer_helper1.c  lexer_helper2.c
src/parser/: parse_command.c  parse_input.c  parse_pipeline.c  parse_redir.c  parse_shell_command.c  parser.c  print_ast.c
tests/: command_list_tests.py  comments_tests.py  echo_tests.py  exit_tests.py  hi  home_tests.sh  if_tests.py  out  pipes_tests.py  redir_tests.py  run_ALL_tests.sh  simple_command_tests.py  singe_quotes_tests.py  true_false_tests.py  while_tests.py
tests/command_list/: 3semicolons.in  60X.in  echo_a_b_c_espaces.in  echo_abc_colle.in  just_one_command.in  just_two_commands.in  ls_echo_pwd_echo.in  pwd_ls.in  this_is_a_big_command_moulinette.in
tests/comments/: HelloWorld.in  This_is_also_a_comment.in  hard_from_subject.in  quoted.in  quoted1.in  shebang.in
tests/echo_tests/: XXXecho__mot1_semi_mot2.in  echo__abc__comment.in  echo__backslashE.in  echo__backslashE__42backslash.in  echo__backslash_n.in  echo__comment.in  echo__e_option__backslash_n.in  (+9 more)
(+66 files in other folders)
